--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="title_activity_settings">Settings</string>
     <string name="title_activity_set_random">Choose constraints</string>
     <string name="title_activity_show_chosen">What to cook:</string>
+    <string name="title_activity_show_recipe">ShowRecipe</string>
 
 </resources>
